# thuai2022-aisdk

./: README.md  build.sh  test.json
__MACOSX/judger/: ._rserver.py
cpp/: CMakeLists.txt  Makefile  contestant_code.cpp  egg_sdk.cpp  egg_sdk.h  schema.cpp  schema.h
docs/: README_template.md
docs/cpp/: cpp-intro.aux  cpp-intro.out  cpp-intro.tex
docs/python/: py-intro.aux  py-intro.fdb_latexmk  py-intro.fls  py-intro.tex
python/: main.py
python/aisdk/: __init__.py  entities.py  gamestate.py
